--- a/css/form.css
+++ b/css/form.css
@@ -45,7 +45,8 @@ input[type=password] {
     font-size: 9pt;
 }
 
-input[type=submit] {
+input[type=submit],
+input[type=button] {
     width: 100%;
     background-color: #478ccd;
     color: white;
@@ -56,7 +57,8 @@ input[type=submit] {
     cursor: pointer;
 }
 
-input[type=submit]:hover {
+input[type=submit]:hover,
+input[type=button]:hover {
     background-color: #3b78b1;
 }
 
